--- a/howitworks/howitworks.html
+++ b/howitworks/howitworks.html
@@ -1,17 +1,93 @@
-<!-- Carlos -->
-
-
-
-
-
-
-
-<!-- Carlos -->
-
-
 <!-- Buhay -->
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="howitworks.css">
+    <title>How It Works</title>
+</head>
+<header>
+    <div class="navbar">
+        <img class="doubletap" src="double_tap.png" alt="">
+        <a href="#">Home</a>
+        <a href="#">Features</a>
+        <a href="#">Pricing</a>
+        <a href="#">How It Works</a>
+        <a href="#">Support</a>
+        <button class="signinbtn">Sign In</button>
+        <button class="tryitbtn">Try It Free</button>
+    </div>
+
+</header>
+
+<div class="flexbox">
+    <div class="focus">
+        <h1>Focus on <br> Your Business</h1><br>
+        <h3>Let Us Handle Everything Else</h3>
+        <h5 class="gray">Subscription Billing, powered with revenue retention tools and a <br> seamless customer
+            experience
+            - without the technical hurdles.</h5> <br>
+
+        <div class="buttonsleft">
+            <button class="signupbtn">Sign Up Free &#187; </button>
+            <button class="chatbtn">&#x1F4AC; Chat With Us </button> <br>
+            <p>
+            <h5 class="gray">Already using <b>Double</b>Tap? <b>Sign In</b></h5>
+            </p>
+        </div>
+
+        <div class="freetrial">
+            <h6>Free 14 day trial</h6>
+            <img src="" alt="">
+            <h6>Manage Customers in Minutes</h6>
+            <h6>Cancel at Anytime</h6>
+        </div>
+    </div>
+
+    
+    <div class="container">
+        <div class="box1"></div>
+         <div class="box-2"></div>
+         <div class="box-3"></div>
+         <div class="Client-Dashboard"></div>
+         <div class="Employee-Profiles"></div>
+         <div class="Client-Calendars"></div>
+         <div class="Analytics"></div>
+         <div class="Project-Comments"></div>
+         <div class="Project-Folders"></div>
+         <div class="Time-Tracking"></div>
+         <div class="Email"></div>
+         <div class="Project-Alerts"></div>
+         </div>
+    
+
+</div>
+
+<body>
+    <!-- Buhay -->
 
 
+    <!-- Carlos --> 
+    <!-- I can also do the footer if ever :) -->
 
-<!-- Buhay -->
+
+    <div class="howitworks">
+        <h4>How It Works</h4> <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime alias doloremque quaerat debitis similique
+            vitae, pariatur numquam, modi voluptatum inventore saepe tenetur nihil natus labore mollitia atque
+            consectetur cum veritatis?</p>
+    </div>
+
+
+    <!-- Carlos -->
+</body>
+
+</html>
