first commit and uploaded assets

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -1,1 +1,71 @@
 <!-- Jack -->
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Sign Up</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/group2_padawans141/signup/signup.css">
+</head>
+
+<body>
+    <br>
+    <div class="container text-center align-items-start mt-5">
+        <div class="row">
+            <div class="col-3">
+                <h1 class="fw-bolder">Sign Up</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="mt-5 text-center">
+                <div class="form1 col-3 mb-5">
+                    <input type="name" class="form-control-lg rounded-pill border-secondary username"
+                        id="exampleFormControlInput1">
+                </div>
+                <br>
+                <div class="form2 col-3 mb-5">
+                    <input type="email" class="form-control-lg rounded-pill border-secondary email"
+                        id="exampleFormControlInput1">
+                </div>
+                <br>
+                <div class="form3 col-3 mb-5">
+                    <input type="password" class="form-control-lg rounded-pill border-secondary pass"
+                        id="exampleFormControlInput1">
+                </div>
+                <div class="col-3 mb-4">
+                    <button type="button" class="btn btn-lg btn-primary rounded-pill w-50">
+                        <h5>Sign up</h5>
+                    </button>
+                </div>
+                <div class="fw-bold col-3 mb-5">
+                    <p>Or Sign up with social platforms</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="d-flex justify-content-evenly">
+                <img src="/group2_padawans141/signup/assets/Ellipse -1.png" alt="">
+                <img src="/group2_padawans141/signup/assets/Ellipse -1.png" alt="">
+                <img src="/group2_padawans141/signup/assets/Ellipse -1.png" alt="">
+                <img src="/group2_padawans141/signup/assets/Ellipse -1.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <img class="side-img" src="/group2_padawans141/signup/assets/Group 10.png" alt="lady signing up">
+    </div>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
