--- a/howitworks/howitworks.html
+++ b/howitworks/howitworks.html
@@ -24,16 +24,19 @@
         <a class="nav" href="#">Pricing</a>
         <a class="nav" href="#">How It Works</a>
         <a class="nav" href="#">Support</a>
+        <div class="navbtns">
         <button class="signinbtn">Sign In</button>
         <button class="tryitbtn">Try It Free</button>
+        </div>
     </div>
 
 </header>
 
 <body>
 
+<div class="twoboxes"> 
     <div class="flexbox">
-        <div class="leftbox"></div>
+        <div class="leftbox">
         <div class="focus">
             <h1>Focus on <br> Your Business</h1>
             <h3>Let Us Handle Everything Else</h3>
@@ -58,18 +61,28 @@
             <h6>Cancel at Anytime</h6>
         </div>
 
+        </div>
     </div>
 
 
     <div class="rightbox">
-        <p>Client Dashboard</p>
-        <p>Analytics</p>
-
-
-        
-
+        <div class="img">
+        <img class="icons" src="icons.png" alt="icons">
+        <!-- <div class="container">
+            <div class="a">Client Dashboard</div>
+            <div class="b">Employee Profiles</div>
+            <div class="c">Client Calendars</div>
+            <div class="d">Analytics</div>
+            <div class="e">Project Comments</div>
+            <div class="f">Project Folders</div>
+            <div class="g">Time Tracking</div>
+            <div class="h">Email</div>
+            <div class="i">Project Alerts</div>
+          </div> -->
+        </div>
     </div>
 
+</div>
 </div>
 
 
