--- a/howitworks/howitworks.html
+++ b/howitworks/howitworks.html
@@ -25,8 +25,8 @@
         <a class="nav" href="#">How It Works</a>
         <a class="nav" href="#">Support</a>
         <div class="navbtns">
-        <button class="signinbtn">Sign In</button>
-        <button class="tryitbtn">Try It Free</button>
+            <button class="signinbtn">Sign In</button>
+            <button class="tryitbtn">Try It Free</button>
         </div>
     </div>
 
@@ -34,74 +34,76 @@
 
 <body>
 
-<div class="twoboxes"> 
-    <div class="flexbox">
-        <div class="leftbox">
-        <div class="focus">
-            <h1>Focus on <br> Your Business</h1>
-            <h3>Let Us Handle Everything Else</h3>
-            <h5 class="gray">Subscription Billing, powered with revenue retention tools and a <br> seamless customer
-                experience
-                - without the technical hurdles.</h5> <br>
+    <div class="twoboxes">
+        <div class="flexbox">
+            <div class="leftbox">
+
+                <h1>Focus on <br> Your Business</h1>
+                <h3>Let Us Handle Everything Else</h3>
+                <h5 class="gray">Subscription Billing, powered with revenue retention tools and a <br> seamless customer
+                    experience
+                    - without the technical hurdles.</h5>
+
+
+                <!-- <div class="buttonsleft"> -->
+                <button class="signupbtn">Sign Up Free &#187; </button>
+                <button class="chatbtn">&#x1F4AC; Chat With Us </button> <br>
+                <p>
+                <h5 class="gray">Already using <b>Double</b>Tap? <b>Sign In</b></h5>
+                </p>
+                <!-- </div> -->
+
+                <div class="freetrial">
+                    <h6>Free 14 day trial</h6>
+                    <h6>&#128309; </h6>
+                    <h6>Manage Customers in Minutes</h6>
+                    <h6>&#128309; </h6>
+                    <h6>Cancel at Anytime</h6>
+                </div>
+
+            </div>
         </div>
 
-        <!-- <div class="buttonsleft"> -->
-        <button class="signupbtn">Sign Up Free &#187; </button>
-        <button class="chatbtn">&#x1F4AC; Chat With Us </button> <br>
-        <p>
-        <h5 class="gray">Already using <b>Double</b>Tap? <b>Sign In</b></h5>
-        </p>
-        <!-- </div> -->
 
-        <div class="freetrial">
-            <h6>Free 14 day trial</h6>
-            <h6>&#128309; </h6>
-            <h6>Manage Customers in Minutes</h6>
-            <h6>&#128309; </h6>
-            <h6>Cancel at Anytime</h6>
+        <div class="rightbox">
+            <div class="img">
+                <img class="icons" src="icons.png" alt="icons">
+    
+            </div>
         </div>
 
-        </div>
     </div>
-
-
-    <div class="rightbox">
-        <div class="img">
-        <img class="icons" src="icons.png" alt="icons">
-        <!-- <div class="container">
-            <div class="a">Client Dashboard</div>
-            <div class="b">Employee Profiles</div>
-            <div class="c">Client Calendars</div>
-            <div class="d">Analytics</div>
-            <div class="e">Project Comments</div>
-            <div class="f">Project Folders</div>
-            <div class="g">Time Tracking</div>
-            <div class="h">Email</div>
-            <div class="i">Project Alerts</div>
-          </div> -->
-        </div>
     </div>
-
-</div>
-</div>
 
 
     <!-- Buhay -->
 
 
     <!-- Carlos -->
-    <!-- I can also do the footer if ever :) -->
+ 
 
 
-    <div class="howitworks">
-        <h4>How It Works</h4> <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime alias doloremque quaerat debitis similique
-            vitae, pariatur numquam, modi voluptatum inventore saepe tenetur nihil natus labore mollitia atque
-            consectetur cum veritatis?</p>
-    </div>
+   
 
 
     <!-- Carlos -->
 </body>
+
+<!-- Buhay -->
+
+<footer>
+    <h2 class="tryftr">Try Double Tap Today!</h2>
+    <h5>Let's Get Started</h5>
+    <button class="ftrget">Get Started  &#187;</button>
+    <button class="ftrchat">&#x1F4AC; Chat With Us</button>
+    <div class="ftrtrial">
+        <h6>Free 14 day trial</h6>
+        <h6>&#9898;</h6>
+        <h6>Manage Customers in Minutes</h6>
+        <h6>&#9898;</h6>
+        <h6>Cancel at Anytime</h6>
+    </div>
+</footer>
+<!-- Buhay -->
 
 </html>
