--- a/landing/landing.html
+++ b/landing/landing.html
@@ -20,7 +20,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="mx-auto class" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-current="page" href="#">Home</a>
@@ -37,66 +37,75 @@
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Support</a>
                     </li>
-                    <a class="btn btn-outline-secondary btn-lg" href="#" role="button">Sign In</a>
-                    <button class=" btn btn-primary btn-lg" type="submit">Try it Free</button>
+                    <a class="btn btn-outline-secondary btn-lg" href="#" role="button">Sign In
+                        <a class="mx-auto class" </a>
+                        </a>
+
+                        <button class=" btn btn-primary btn-lg" type="submit">Try it Free</button>
                 </ul>
             </div>
         </nav>
     </header>
     <div class="flex-column" style="width: 35rem;">
-        <div class="d-flex flex-column bd-highlight mb-3">
+        <div class="d-flex justify-content-center mb-3">
             <div class="p-2 bd-highlight"><b>Focus on Your Business</b></div>
             <div class="p-2 bd-highlight">Let Us Handle Everything Else</div>
             <div class="p-2 bd-highlight">Subscription Billing, powered with revenue retention tools and a seamless
                 customer experience - without the
                 technical hurdles.</div>
-        </div>
-        <div class="flex" </div>
-            <div class="d-flex flex-column-reverse bd-highlight">
-                <div class="p-2 bd-highlight">
+            <hr>
+            <div class="sign" </div>
+                <div class="d-flex flex-column-reverse bd-highlight">
+                    <div class="p-2 bd-highlight">
+                    </div>
+                    <div class="p-2 bd-highlight">
+                        <img src="business.png" class="img-fluid" alt="" class="relative">
+                    </div>
                 </div>
-                <div class="p-2 bd-highlight">
-                    <img src="business.png" class="img-fluid" alt="" class="relative">
-                </div>
+                <div class="sign">
+                    <div class="justify-content-center"></div>
+                    <h2>Subscription Billing, powered with revenue retention tools and a seamless customer experience -
+                        without
+                        the
+                        technical hurdles.
+                    </h2>
+                    <button type="button" class="btn btn-primary" enabled>Sign Up Free</button>
+                    <button type="button" class="btn btn-outline-secondary" enabled><strong>Chat With
+                            Us</strong></button>
+                    <h3>Already using <strong>Double</strong>Tap?<strong>Sign in</strong></h3>
 
-                <h5 class="card-title"><strong>Focus on Your Business</strong></h5>
-                <p class="card-text">Let Us Handle Everything Else</p>
+                    <h4><strong>Free 14 day trial -- Manage Customers in Minutes -- Cancel at Anytime</strong></h4>
+                </div>
             </div>
-            <h2>Subscription Billing, powered with revenue retention tools and a seamless customer experience - without
-                the
-                technical hurdles.
-            </h2>
-            <button type="button" class="btn btn-primary" enabled>Sign Up Free</button>
-            <button type="button" class="btn btn-outline-secondary" enabled><strong>Chat With Us</strong></button>
-            <h3>Already using <strong>Double</strong>Tap?<strong>Sign in</strong></h3>
-
-            <h4><strong>Free 14 day trial -- Manage Customers in Minutes -- Cancel at Anytime</strong></h4>
         </div>
+
 
 
         <hr>
 
-        <div class="mid"
-        <h2><strong>Start to Explore Double Tap</strong></h2>
-        <text>A new and better way for small businesses to manage their customer base, payments and keep track of
-            internal tasks</text>
+        <div class="start" <h2><strong>Start to Explore Double Tap</strong></h2>
+            <text>A new and better way for small businesses to manage their customer base, payments and keep track of
+                internal tasks</text>
             <button>Payments</button>
             <button>Retain</button>
-            <button>Reporting</button>
+            <button><img src="landing/reporting.png" class="img" alt="Responsive image">></source> Reporting</button>
+            <source img="landing/reporting.png">
+            </source>
             <button>Convert</button>
         </div>
         <div class="card1" style="width: 100%;">
             <div class="card-body">
-              <h5 class="card-title">Start Accepting Payments With Ease</h5>
-              <p class="card-text">ACCEPTING PAYMENTS WITH EASE</p>
-              <h3>Deliver the world of payment options and seamless checkout experiences, making it easy for your customers to pay you for your products and services.
-                -accept credit & debit cards, Paypal, ACH, Apple pay and more with the flick of a switch
-                -process transactions in up to 32 different currencies.
-                -integrate with popular payment gateways like Stripe, and Braintree
-                -Select from a variety of different checkout options and experiences</h3>
-              <a href="#" class="btn btn-primary">Learn more ></a>
+                <h5 class="card-title">Start Accepting Payments With Ease</h5>
+                <p class="card-text">ACCEPTING PAYMENTS WITH EASE</p>
+                <h3>Deliver the world of payment options and seamless checkout experiences, making it easy for your
+                    customers to pay you for your products and services.
+                    -accept credit & debit cards, Paypal, ACH, Apple pay and more with the flick of a switch
+                    -process transactions in up to 32 different currencies.
+                    -integrate with popular payment gateways like Stripe, and Braintree
+                    -Select from a variety of different checkout options and experiences</h3>
+                <a href="#" class="btn btn-primary">Learn more ></a>
             </div>
-          </div>
+        </div>
 
 
         <h4><strong>Solutions to fit your business needs</strong></h4>
