--- a/howitworks/howitworks.html
+++ b/howitworks/howitworks.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="howitworks.css">
+    <script src="https://kit.fontawesome.com/18b8f6f77b.js" crossorigin="anonymous"></script>
     <title>How It Works</title>
 </head>
 
@@ -43,8 +44,6 @@
                 <h5 class="gray">Subscription Billing, powered with revenue retention tools and a <br> seamless customer
                     experience
                     - without the technical hurdles.</h5>
-<!-- Carlos -->
-
 
                 <!-- <div class="buttonsleft"> -->
                 <button class="signupbtn">Sign Up Free &#187; </button>
@@ -75,26 +74,98 @@
 
     </div>
     </div>
-<!-- Carlos -->
-
-
-    <!-- Buhay -->
-
 
     <!-- Carlos -->
-
-
-
-
-
-<!-- Buhay -->
-
+    <div>
+        <hr class="horizontal_line">
+    </div>
+    <div class="flex_container">
+        <p>How It Works</p>
+    </div>
+    <div class="text_box_1">
+        <p>Lorem Ipsum is simply a dummy text of the printing and typesetting industry. Lorem Ipsum
+            has been the industry's standard dummy text ever since the 1500's, when an unknown printer
+            took a gallery of type and scrambled it to make a
+        </p>
+    </div>
+    <div class="flex_container">
+        <div class="collect_useful_info_image_box">
+            <img class="collect_useful_info_image" src="/howitworks/collect_info.png" alt="Collect Useful Info ">
+        </div>
+        <div class="info_text_box">
+            <p class="collect_useful_info_text">Collect Useful Info</p>
+            <p class="collect_useful_info_text_paragraph">Deliver the world of payment options and seamless checkout
+                experiences,
+                making it easy for your customers to pay you for your products and services.
+            </p>
+        </div>
+    </div>
+    <div class="text_box_2">
+        <p>Lorem Ipsum is simply a dummy text of the printing and typesetting industry. Lorem Ipsum
+            has been the industry's standard dummy text ever since the 1500's, when an unknown printer
+            took a gallery of type and scrambled it to make a
+        </p>
+    </div>
+    <div class="flex_container">
+        <div class="get_paid_sooner_image_box">
+            <img class="get_paid_sooner__image" src="/howitworks/Take Payments.png" alt="Collect Useful Info ">
+        </div>
+        <div class="info_text_box">
+            <p class="get_paid_sooner_text">Get Paid Sooner</p>
+            <p class="collect_useful_info_text_paragraph">Lorem Ipsum is simply a dummy text of the printing
+                and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the
+                1500's, when an unknown printer took a gallery of type and scrambled it to make a type specimen book.
+                It has survived not only five centuries, but also the leap into electronics typesettin, remaining
+                essentially unchanged.
+            </p>
+        </div>
+    </div>
+    <br>
+    <footer>
+        <div>
+            <p class="footer_text" id="try_double_tap_today_text">Try Double Tap Today!</p>
+        </div>
+        <div>
+            <p class="footer_text" id="lets_get_started_text">Lets Get Started</p>
+        </div>
+        <div class="flex_container_footer">
+            <div>
+                <div id="get_started_btn">
+                    <buttons>
+                        <div id="arrows">&#8811;</div>
+                        <div id="get_started_text">Get Started</div>
+                    </buttons>
+                </div>
+            </div>
+            <div>
+                <div id="chat_btn">
+                    <buttons>
+                        <div class="fa-solid fa-comment-dots" id="speech_bubble"></div>
+                        <div id="chat_with_us_text">Chat With Us</div>
+                    </buttons>
+                </div>
+            </div>
+        </div>
+        <div style="margin-top: 25px;">
+            <div class="flex_container_footer_smaller_gap">
+                <div style="font-weight: lighter; font-size: 11px; color: white;">Free 14 day trial</div>
+                <div
+                    style="margin-top: 4px; height: 7px; width: 2px; background-color: white; border-radius: 50px; padding-right: 4px;">
+                </div>
+                <div style="font-weight: lighter; font-size: 11px; color: white;">Manage Customers in Minutes</div>
+                <div
+                    style="margin-top: 4px; height: 7px; width: 2px; background-color: white; border-radius: 50px; padding-right: 4px;">
+                </div>
+                <div style="font-weight: lighter; font-size: 11px; color: white;">Cancel at Anytime</div>
+            </div>
+        </div>
+    </footer>
     <!-- Carlos -->
 </body>
 
 <!-- Buhay -->
 
-<footer>
+<!-- <footer>
     <h2 class="tryftr">Try Double Tap Today!</h2>
     <h5>Let's Get Started</h5>
     <button class="ftrget">Get Started  &#187;</button>
@@ -106,8 +177,7 @@
         <h6>&#9898;</h6>
         <h6>Cancel at Anytime</h6>
     </div>
-</footer>
+</footer> -->
 <!-- Buhay -->
 
 </html>
-<!-- Buhay -->
