--- a/signin/signin.html
+++ b/signin/signin.html
@@ -1,1 +1,58 @@
-<!-- Juan -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="signin.css">
+    <title>Sign In</title>
+</head>
+
+<body>
+
+    <box class="box1">
+        <h3> Don't Have an Account Yet?</h3> <br>
+        <h3>What are you waiting for? Let's Fix that now!</h3> 
+        <br>
+        
+        <button class="signupbtn">Sign Up</button>
+
+    </box>
+
+    <box class="box2">
+        <h2>Sign In</h2>
+
+        <form>
+        
+        <div class="inputfields">
+            <label for="username"></label>
+            <input type="text" id="username">
+
+            <label for="email"></label>
+            <input type="email" id="email">
+
+            <label for="password"></label>
+            <input type="password" id="password">
+
+
+
+            </div>
+        </form>
+
+        <div class="iconbuttons">
+            <button>Sign In</button> <br>
+            <a href="#"><img src="Path 151.png"></a>
+            <a href="#"><img src=""></a>
+            <a href="#"></a><img src=""></a>
+            <a href="#"></a><img src=""></a>
+
+         </div>
+
+    </box>
+
+</body>
+
+
+</html>
