--- a/landing/landing.html
+++ b/landing/landing.html
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-    <header class="header-class">
+    <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="Logo.png" class="img-fluid" alt="relative" style="width: 200px; height: 50px;" ;>
+                <img src="Logo.png" class="img-fluid" alt="DoubleTap Logo" style="width: 200px; height: 50px;">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="mx-auto class" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-current="page" href="#">Home</a>
@@ -37,100 +37,163 @@
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Support</a>
                     </li>
-                    <a class="btn btn-outline-secondary btn-lg" href="#" role="button">Sign In
-                        <a class="mx-auto class" </a>
-                        </a>
-
-                        <button class=" btn btn-primary btn-lg" type="submit">Try it Free</button>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-secondary btn-lg" href="#" role="button">Sign In</a>
+                    </li>
+                    <li class="nav-item">
+                        <button type="button" class="btn btn-primary btn-lg">Try it Free</button>
+                    </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <div class="flex-column" style="width: 35rem;">
-        <div class="d-flex justify-content-center mb-3">
-            <div class="p-2 bd-highlight"><b>Focus on Your Business</b></div>
-            <div class="p-2 bd-highlight">Let Us Handle Everything Else</div>
-            <div class="p-2 bd-highlight">Subscription Billing, powered with revenue retention tools and a seamless
-                customer experience - without the
-                technical hurdles.</div>
-            <hr>
-            <div class="sign" </div>
-                <div class="d-flex flex-column-reverse bd-highlight">
-                    <div class="p-2 bd-highlight">
-                    </div>
-                    <div class="p-2 bd-highlight">
-                        <img src="business.png" class="img-fluid" alt="" class="relative">
-                    </div>
-                </div>
-                <div class="sign">
-                    <div class="justify-content-center"></div>
-                    <h2>Subscription Billing, powered with revenue retention tools and a seamless customer experience -
-                        without
-                        the
-                        technical hurdles.
-                    </h2>
-                    <button type="button" class="btn btn-primary" enabled>Sign Up Free</button>
-                    <button type="button" class="btn btn-outline-secondary" enabled><strong>Chat With
-                            Us</strong></button>
-                    <h3>Already using <strong>Double</strong>Tap?<strong>Sign in</strong></h3>
+    <div class="chat">
+        <div class="d-flex  mb-3">
+            <div class="d-flex flex-column bd-highlight">
+                <div class="p-2 bd-highlight">
 
-                    <h4><strong>Free 14 day trial -- Manage Customers in Minutes -- Cancel at Anytime</strong></h4>
+                    <div class="p-2 bd-highlight"><b>Focus on Your Business</b></div>
+                    <div class="p-2 bd-highlight">Let Us Handle Everything Else</div>
+                    <div class="p-2 bd-highlight">
+                        <h2>Subscription Billing, powered with revenue retention tools and a seamless customer
+                            experience -
+                            without
+                            the
+                            technical hurdles.</h2>
+                        <button type="button" class="btn btn-primary">Sign Up Free</button>
+                        <button type="button" class="btn btn-outline-secondary"><strong>Chat With Us</strong></button>
+                        <h3>Already using <strong>Double</strong>Tap? <strong>Sign in</strong></h3>
+                        <div>
+                            <strong><span class="blue-dot">Free 14 day trial</span>
+                                <span class="blue-dot">Manage Customers
+                                    in Minutes</span>
+                                <span class="blue-dot">Cancel at Anytime</span></strong>
+                            <div class="sign">
+                                <div class="box1">
+                                    <img src="business.png" class="img-fluid" alt="Business Image">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
+
+
+
             </div>
         </div>
-
-
-
         <hr>
 
-        <div class="start" <h2><strong>Start to Explore Double Tap</strong></h2>
-            <text>A new and better way for small businesses to manage their customer base, payments and keep track of
-                internal tasks</text>
-            <button>Payments</button>
-            <button>Retain</button>
-            <button><img src="landing/reporting.png" class="img" alt="Responsive image">></source> Reporting</button>
-            <source img="landing/reporting.png">
-            </source>
-            <button>Convert</button>
+        <div class="start">
+            <h2><strong>Start to Explore Double Tap</strong></h2>
+            <p>A new and better way for small businesses to manage their customer base, payments and keep track of
+                internal
+                tasks</p>
+            <button type="button">Payments</button>
+            <img src="analytics.png" alt="Email" class="img-thumbnail">
+            <button type="button">Retain</button>
+            <img src="person.png" alt="Email" class="img-thumbnail">
+            <button type="button">Reporting</button>
+            <img src="analytics.png" alt="Email" class="img-thumbnail">
+            <button type="button">Convert</button>
+            <img src="arrows.png" alt="Email" class="img-thumbnail">
         </div>
-        <div class="card1" style="width: 100%;">
+
+        <div class="d-flex flex-row bd-highlight mb-3">
+            <div class="p-2 bd-highlight">
+                <div class="credit">
+                    <img src="credit.png" alt="Email" class="img-relative">
+                </div>
+            </div>
+            <div class="p-2 bd-highlight">
+                <div class="card-body">
+                    <h5>Start Accepting Payments With Ease</h5>
+                    <p class="card-text">ACCEPTING PAYMENTS WITH EASE</p>
+                    <h3>Deliver the world of payment options and seamless checkout experiences, making it easy for your
+                        customers to pay you for your products and services.
+                        -accept credit & debit cards, Paypal, ACH, Apple pay and more with the flick of a switch
+                        -process transactions in up to 32 different currencies.
+                        -integrate with popular payment gateways like Stripe, and Braintree
+                        -Select from a variety of different checkout options and experiences</h3>
+                    <a href="#" class="btn btn-primary">Learn more ></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <h4><b>Solutions to fit your business needs</b></h4>
+    <div class="d-flex flex-row bd-highlight mb-3">
+        <div class="p-2 bd-highlight">
+            <div class="card" style="width: 15rem;">
+                <img src="email.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title"><b>Email dashboards</b></h5>
+                    <p class="card-text">Automate client responses, and keep track of any communication your team has
+                        with a client.</p>
+                    <a href="#" class="btn btn-light">Learn More ></a>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex flex-row bd-highlight mb-3"></div>
+
+        <div class="card" style="width: 15rem;">
+            <img src="email.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Start Accepting Payments With Ease</h5>
-                <p class="card-text">ACCEPTING PAYMENTS WITH EASE</p>
-                <h3>Deliver the world of payment options and seamless checkout experiences, making it easy for your
-                    customers to pay you for your products and services.
-                    -accept credit & debit cards, Paypal, ACH, Apple pay and more with the flick of a switch
-                    -process transactions in up to 32 different currencies.
-                    -integrate with popular payment gateways like Stripe, and Braintree
-                    -Select from a variety of different checkout options and experiences</h3>
-                <a href="#" class="btn btn-primary">Learn more ></a>
+                <h5 class="card-title"><b>Task management</b></h5>
+                <p class="card-text">Automate client responses, and keep track of any communication your team has with a
+                    client.</p>
+                <a href="#" class="btn btn-light">Learn More ></a>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="d-flex flex-row bd-highlight mb-3">
+        <div class="d-flex flex-row bd-highlight mb-3"></div>
+        <div class="p-2 bd-highlight">
+            <div class="card" style="width: 15rem;">
+                <img src="email.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title"><b>Analytics</b></h5>
+                    <p class="card-text">Automate client responses, and keep track of any communication your team has
+                        with a
+                        client.</p>
+                    <a href="#" class="btn btn-light">Learn More ></a>
+                </div>
             </div>
         </div>
 
-
-        <h4><strong>Solutions to fit your business needs</strong></h4>
-
-
-
-</body>
-
-<div>
+        <div class="card" style="width: 15rem;">
+            <img src="email.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title"><b>Project calendars</b></h5>
+                <p class="card-text">Automate client responses, and keep track of any communication your team has with a
+                    client.</p>
+                <a href="#" class="btn btn-light">Learn More ></a>
+            </div>
+        </div>
+    </div>
+    </div>
     <section class="footer">
-        <footer class="text-center text-white" style="background-color: #2270b9;">
+        <footer class="text-center text-white">
             <p class="d-flex justify-content-center align-items-center">
                 <span class="me-3"><b>TRY DOUBLE TAP TODAY</b></span>
-                <button data-mdb-ripple-init type="button" class="btn btn-outline-light btn-rounded">
-                    Get Started
+                <button type="button" class="btn btn-success btn-rounded">
+                    Get Started >>
                 </button>
-                <button data-mdb-ripple-init type="button" class="btn btn-outline-light btn-rounded">
+                <button type="button" class="btn btn-light btn-rounded">
                     Chat With Us
                 </button>
-            <h4><strong>Free 14 day trial -- Manage Customers in Minutes -- Cancel at Anytime</strong></h4>
             </p>
+            <h4><strong>
+                    14 day trial
+                    <span class="white-dot"></span>
+                    Manage Customers in Minutes
+                    <span class="white-dot"></span>
+                    Cancel at Anytime
+                </strong></h4>
+        </footer>
     </section>
-</div>
-</footer>
-</section>
-</div>
+
+</body>
 
 </html>
